--- a/mapstyle.css
+++ b/mapstyle.css
@@ -8,5 +8,7 @@ body {
 #map,
 body,
 html {
-  height: 100%;
+  height: 85%;
+  width: 75%;
 }
+/* #map {position: absolute; top: 0; bottom: 0; left: 0; right: 0;} */
