--- a/static/css/mapstyle.css
+++ b/static/css/mapstyle.css
@@ -1,14 +1,44 @@
 /* Remove the default margin and padding from the body. */
 body {
-  padding: 2;
-  margin: 2;
+  padding: 1;
+  margin: 1;
 }
 
 /* Set map, body, and html to 100% of the screen size. */
 #map,
 body,
 html {
-  height: 85%;
-  width: 75%;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 30px;
 }
 /* #map {position: absolute; top: 0; bottom: 0; left: 0; right: 0;} */
+
+/* Style to make the table scrollable */
+#filteredTableContainer {
+  margin-bottom: 30px;
+  width: 100%;
+  overflow: auto;
+  max-height: 300px;
+  /* Set the max height as needed */
+}
+
+/* Optional: Style for the table */
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+header {
+  margin-bottom: 30px;
+  background-color: #f0f0f0;
+  padding: 4;
+  text-align: center;
+}
