--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,13 @@ h3 {
 }
 
 .filterselect {
-  border: 1px black;
-  display: inline-block;
-  margin-bottom: 10px;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+  margin-bottom: 20px;
+  padding: 5;
 }
+
 
 body {
   /* display: flex; */
@@ -34,10 +37,11 @@ body {
 
 /* Style to make the table scrollable */
 .scrollable-table {
-  width: 100%;
+  width: 90%;
   overflow: auto;
-  max-height: 300px;
+  max-height: 400px;
   margin-bottom: 20px;
+  padding: auto;
   /* Set the max height as needed */
 }
 
@@ -45,6 +49,8 @@ body {
 table {
   border-collapse: collapse;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* creates grid around the table */
@@ -64,7 +70,7 @@ td {
 #map, #bar {
   /* Add styling to the containers */
   width: 50%;
-  height: 75%;
+  /* height: 75%; */
   margin: 10px;
   margin-bottom: 10px;
   padding: 20px;
